--- a/thinkdifferent-data-datasource/pom.xml
+++ b/thinkdifferent-data-datasource/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.thinkdifferent.hutool.db</groupId>
             <artifactId>hutool-db</artifactId>
             <version>0.5</version>
@@ -65,6 +70,11 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.thinkdifferent.data</groupId>
+            <artifactId>thinkdifferent-data-process</artifactId>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 
