--- a/thinkdifferent-data-process/pom.xml
+++ b/thinkdifferent-data-process/pom.xml
@@ -37,11 +37,6 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.thinkdifferent.data</groupId>
-            <artifactId>thinkdifferent-data-datasource</artifactId>
-            <version>${project.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>net.sourceforge.htmlcleaner</groupId>
@@ -62,6 +57,10 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-json</artifactId>
             <version>${hutool.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 </project>
