--- a/start/pom.xml
+++ b/start/pom.xml
@@ -2,12 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.4.RELEASE</version>
-        <relativePath/>
-    </parent>
 
     <groupId>com.test</groupId>
     <version>1.0</version>
@@ -19,11 +13,22 @@
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
     </properties>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -33,9 +38,9 @@
         <dependency>
             <groupId>com.thinkdifferent.data</groupId>
             <artifactId>thinkdifferent-data-all</artifactId>
-            <version>0.5</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/thinkdifferent-data-all-0.5.jar</systemPath>
+            <version>0.6</version>
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/lib/thinkdifferent-data-all-0.5.jar</systemPath>-->
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
