--- a/thinkdifferent-data-datasource/pom.xml
+++ b/thinkdifferent-data-datasource/pom.xml
@@ -8,15 +8,16 @@
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>thinkdifferent-data-datasource</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <druid.version>1.2.5</druid.version>
+        <druid.version>1.2.8</druid.version>
         <dom4j.version>2.1.3</dom4j.version>
-        <jackson.version>2.10.1</jackson.version>
+        <jackson.version>2.13.1</jackson.version>
+        <opencsv.version>5.5.2</opencsv.version>
     </properties>
 
     <dependencies>
@@ -32,7 +33,7 @@
         <dependency>
             <groupId>com.thinkdifferent.hutool.db</groupId>
             <artifactId>hutool-db</artifactId>
-            <version>0.5</version>
+            <version>5.7.18-bate</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -43,16 +44,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>cn.hutool</groupId>-->
-<!--            <artifactId>hutool-all</artifactId>-->
-<!--            <scope>system</scope>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
@@ -75,6 +66,11 @@
             <groupId>com.thinkdifferent.data</groupId>
             <artifactId>thinkdifferent-data-process</artifactId>
             <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>${opencsv.version}</version>
         </dependency>
     </dependencies>
 
