--- a/thinkdifferent-data-schedule/pom.xml
+++ b/thinkdifferent-data-schedule/pom.xml
@@ -33,24 +33,14 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>cn.hutool</groupId>-->
-<!--            <artifactId>hutool-all</artifactId>-->
-<!--            <scope>system</scope>-->
-<!--            <systemPath>${basedir}/../lib/hutool-all-5.7.18.jar</systemPath>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>com.thinkdifferent.data</groupId>
-            <artifactId>thinkdifferent-data-pom</artifactId>
-        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.opencsv</groupId>
-            <artifactId>opencsv</artifactId>
-            <version>5.5.2</version>
+            <groupId>com.thinkdifferent.data</groupId>
+            <artifactId>thinkdifferent-data-datasource</artifactId>
+            <version>${revision}</version>
         </dependency>
 
         <!--CXF webService-->
@@ -63,13 +53,13 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
-            <version>3.2.5</version>
+            <version>3.4.5</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-http</artifactId>
-            <version>3.3.6</version>
+            <version>3.4.5</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -80,6 +70,6 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
 
-        <webserver.version>2.2.6.RELEASE</webserver.version>
+        <webserver.version>2.6.2</webserver.version>
     </properties>
 </project>
